# usfm-onion

./: .gitignore  Cargo.toml  README.md  current.md  execution.ndjson  newWork.md  notes.md  package.json  perf-notes.md  refactor.md  vision.md
ai-plans/: part3-4-lanes.md
benches/: README.md  common.rs  conversions.rs  corpus_matrix.rs  cst.rs  cst_walk.rs  diff.rs  document_tree_breakdown.rs  document_tree_corpus.rs  execution.rs  format.rs  html.rs  lexer.rs  lint.rs  omni.rs  ops_lint.rs  parse.rs  public_api.rs  usj.rs  usx.rs  wasm_corpus_matrix.mjs
crates/usfm_onion_wasm/: Cargo.toml
crates/usfm_onion_wasm/src/: lib.rs
en_ulb/: 01-GEN.usfm  03-LEV.usfm  04-NUM.usfm  05-DEU.usfm  07-JDG.usfm  08-RUT.usfm  15-EZR.usfm  18-JOB.usfm  19-PSA.usfm  20-PRO.usfm  23-ISA.usfm  24-JER.usfm  26-EZK.usfm  27-DAN.usfm  28-HOS.usfm  29-JOL.usfm  30-AMO.usfm  32-JON.usfm  33-MIC.usfm  34-NAM.usfm  36-ZEP.usfm  38-ZEC.usfm  39-MAL.usfm  44-JHN.usfm  46-ROM.usfm  47-1CO.usfm  48-2CO.usfm  49-GAL.usfm  50-EPH.usfm  53-1TH.usfm  54-2TH.usfm  55-1TI.usfm  56-2TI.usfm  57-TIT.usfm  58-PHM.usfm  59-HEB.usfm  63-1JN.usfm  65-3JN.usfm  README.md  manifest.yaml  (+1 more)
en_ulb/00-ULB_front&back/: ULB-20-Appendix.md
example-corpora/bdf_reg/: 41-MAT.usfm  42-MRK.usfm  43-LUK.usfm  44-JHN.usfm  45-ACT.usfm  46-ROM.usfm  47-1CO.usfm  48-2CO.usfm  49-GAL.usfm  50-EPH.usfm  51-PHP.usfm  52-COL.usfm  53-1TH.usfm  54-2TH.usfm  55-1TI.usfm  56-2TI.usfm  57-TIT.usfm  58-PHM.usfm  59-HEB.usfm  60-JAS.usfm  61-1PE.usfm  62-2PE.usfm  63-1JN.usfm  64-2JN.usfm  65-3JN.usfm  66-JUD.usfm  67-REV.usfm  README.md  issues.txt  manifest.yaml  wordlist.tsv
example-corpora/en_ulb/: 02-EXO.usfm  06-JOS.usfm  09-1SA.usfm  10-2SA.usfm  11-1KI.usfm  12-2KI.usfm  13-1CH.usfm  14-2CH.usfm  16-NEH.usfm  17-EST.usfm  21-ECC.usfm  22-SNG.usfm  25-LAM.usfm  35-HAB.usfm  37-HAG.usfm  41-MAT.usfm  42-MRK.usfm  43-LUK.usfm  45-ACT.usfm  51-PHP.usfm  52-COL.usfm  60-JAS.usfm  61-1PE.usfm  62-2PE.usfm  64-2JN.usfm  66-JUD.usfm  67-REV.usfm
example-corpora/en_ulb/00-ULB_front&back/: ULB-10-License.md  ULB-11-Intro.md
example-corpora/en_ulb/01-About_the_ULB_for_Editors/: ULB-Decisions.for.ULB.Editors.md
example-corpora/en_ult/: 02-EXO.usfm  03-LEV.usfm  04-NUM.usfm  05-DEU.usfm  06-JOS.usfm  07-JDG.usfm  08-RUT.usfm  09-1SA.usfm  10-2SA.usfm  11-1KI.usfm  12-2KI.usfm  13-1CH.usfm  14-2CH.usfm  15-EZR.usfm  16-NEH.usfm  17-EST.usfm  18-JOB.usfm  20-PRO.usfm  21-ECC.usfm  22-SNG.usfm  24-JER.usfm  25-LAM.usfm  27-DAN.usfm  28-HOS.usfm  29-JOL.usfm  30-AMO.usfm  31-OBA.usfm  32-JON.usfm  33-MIC.usfm  34-NAM.usfm  35-HAB.usfm  36-ZEP.usfm  37-HAG.usfm  38-ZEC.usfm  39-MAL.usfm  41-MAT.usfm  42-MRK.usfm  43-LUK.usfm  44-JHN.usfm  45-ACT.usfm  (+23 more)
example-corpora/examples.bsb/: custom.sty  custom.vrs
pkg-bundler/: .gitignore  package.json  usfm_onion_web.d.ts  usfm_onion_web.js  usfm_onion_web_bg.js  usfm_onion_web_bg.wasm  usfm_onion_web_bg.wasm.d.ts
pkg-web/: .gitignore  README.md  package.json  usfm_onion_web.d.ts  usfm_onion_web.js  usfm_onion_web_bg.wasm  usfm_onion_web_bg.wasm.d.ts
scripts/: restore-wasm-package-layout.mjs  test-web-package.mjs
src/: api.rs  diff.rs  editor_tree_types.rs  export_tree.rs  format.rs  handle.rs  html.rs  inspect.rs  lexer.rs  lib.rs  lint.rs  lint_impl.rs  marker_defs.rs  marker_defs_data.rs  markers.rs  parse.rs  recovery.rs  structure.rs  syntax.rs  token.rs  transform.rs  usj.rs  usj_to_usfm.rs  usj_types.rs  usx.rs  usx_to_usfm.rs  vref.rs  write_exact.rs
src/ast/: mod.rs
src/convert/: mod.rs
src/cst/: mod.rs
src/diff/: mod.rs
src/document_tree/: mod.rs
src/format/: mod.rs
src/internal/: diff.rs  format.rs  html.rs  inspect.rs  lexer.rs  lint.rs  marker_defs.rs  marker_defs_data.rs  markers.rs  mod.rs  parse.rs  recovery.rs  syntax.rs  transform.rs  tree_walk.rs  usj.rs  usj_to_usfm.rs  usj_walk.rs  usx.rs  usx_to_usfm.rs  vref.rs  wasm.rs  write_exact.rs  xml.rs
src/internal/api/: convert.rs  intake.rs  mod.rs  ops.rs  tests.rs  types.rs
src/lint/: mod.rs
src/markers/: mod.rs
src/model/: cst.rs  document_tree.rs  editor_tree.rs  mod.rs  token.rs  usj.rs
src/parse/: handle.rs  mod.rs
src/tokens/: mod.rs
testData/advanced/figureInNote/: origin.xml
testData/biblica/BlankLinesWithFigures/: origin.xml
tests/: cst_ast.rs  public_api_surface.rs  roundtrip.rs  scanner.rs  tokens.rs  usj.rs  usj_roundtrip.rs  usx.rs  usx_roundtrip.rs
tests/common/: mod.rs
(+132 files in other folders)
