[package]
name = "usfm_onion"
default-run = "usfm-onion"
version = "0.1.0"
edition = "2024"
description = "Rust-first USFM parsing, linting, formatting, conversion, and diffing"
license = "MIT"
readme = "README.md"
keywords = ["usfm", "parser", "formatter", "bible", "text"]
categories = ["parser-implementations", "text-processing"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "usfm-onion"
path = "src/bin/usfm-onion.rs"
bench = false

[[bin]]
name = "ops-lint-trace"
path = "src/bin/ops-lint-trace.rs"
bench = false

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
quick-xml = "0.37"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "roundtrip"
path = "tests/roundtrip.rs"

[[bench]]
name = "public_api"
harness = false

[[bench]]
name = "corpus_matrix"
harness = false
required-features = ["rayon"]

[[bench]]
name = "ops_lint"
harness = false

[[bench]]
name = "conversions"
harness = false

[[bench]]
name = "document_tree_breakdown"
harness = false

[[bench]]
name = "document_tree_corpus"
harness = false
required-features = ["rayon"]
