[package]
name = "usfm_onion"
autobins = true
autobenches = false
autotests = false
version = "0.1.0"
edition = "2024"
description = "Rust-first USFM parsing, linting, formatting, conversion, and diffing"
license = "MIT"
readme = "README.md"
keywords = ["usfm", "parser", "formatter", "bible", "text"]
categories = ["parser-implementations", "text-processing"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "playground"
path = "src/bin/playground.rs"
bench = false

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
logos = "0.16.1"
quick-xml = "0.37"
rayon = { version = "1.10", optional = true }
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parse"
harness = false
