[package]
name = "usfm_onion_wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for usfm_onion"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tsify = "0.5.6"
usfm_onion = { path = "../.." }
wasm-bindgen = "0.2"
